# testing-bot

./: .env.example  .gitignore  Cargo.toml  README.md
ops/: latency-checklist.md
ops/systemd/: polymarket-copy-bot.service
src/: attribution_fast.rs  attribution_logger.rs  config.rs  health.rs  latency.rs  latency_monitor.rs  lib.rs  log_retention.rs  log_rotation.rs  main.rs  models.rs  notifier.rs  portfolio.rs  position_registry.rs  position_resolver.rs  prediction.rs  raw_activity_logger.rs  risk.rs  rolling_jsonl.rs  storage.rs  wallet_registry.rs  wallet_scanner.rs  wallet_score.rs
src/detection/: liquidity_sweep_detector.rs  mod.rs  trade_inference.rs
src/execution/: mod.rs  order_executor.rs
src/exits/: resolution.rs
src/orderbook/: mod.rs  orderbook_levels.rs  orderbook_state.rs
src/runtime/: backpressure.rs  control.rs  hot_path.rs  mod.rs  ring_buffer.rs  websocket_reconnect.rs  worker_pool.rs
src/wallet/: activity_stream.rs  mod.rs  pending_signal_buffer.rs  readiness.rs  wallet_filter.rs  wallet_matching.rs
src/websocket/: market_stream.rs  mod.rs  stream_router.rs
target-release-verify/: .rustc_info.json
target-release-verify/release/: polymarket-copy-bot.d
target-release-verify/release/.fingerprint/adler2-f0559e8fe97855f1/: lib-adler2  lib-adler2.json
target-release-verify/release/.fingerprint/alloc-no-stdlib-4182125af05f3651/: lib-alloc_no_stdlib  lib-alloc_no_stdlib.json
target-release-verify/release/.fingerprint/alloc-stdlib-e696a87cbc52974a/: lib-alloc_stdlib  lib-alloc_stdlib.json
tests/: execution_parity.rs
(+753 files in other folders)
